爬取黄河水情日报

--- a/01 Request模块的使用/table.html
+++ b/01 Request模块的使用/table.html
@@ -1,12 +1,13 @@
-<table class="a">
-    <thead class="a">
+<div>
+    <table class="a">
+        <thead class="a">
         <tr>
             <td>标题一</td>
             <td>标题二</td>
             <td>标题三</td>
         </tr>
-    </thead >
-    <tbody class="adasdsadasdadsa">
+        </thead>
+        <tbody class="adasdsadasdadsa">
         <tr>
             <td>1</td>
             <td>2</td>
@@ -17,5 +18,13 @@
             <td>2</td>
             <td>3</td>
         </tr>
-    </tbody>
-</table>
+        </tbody>
+    </table>
+    <table>
+        <thead>
+        <tr>
+            <td>1</td>
+        </tr>
+        </thead>
+    </table>
+</div>
